--- a/test/fixtures/clientes.yml
+++ b/test/fixtures/clientes.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  email: MyString
-  password_digest: MyString
+  nombre: MyString
 
 two:
-  email: MyString
-  password_digest: MyString
+  nombre: MyString
