--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
+        #  adapter: postgresql
+        # database: mgap-devel
+        # pool: 5
+        # timeout: 5000
+        # username: chreyes
+        # password: shhhade
   adapter: sqlite3
   database: db/development.sqlite3
   pool: 5
@@ -12,14 +18,14 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+#test:
+#  adapter: sqlite3
+#  database: db/test.sqlite3
+# pool: 5
+# timeout: 5000
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+#production:
+#  adapter: sqlite3
+# database: db/production.sqlite3
+#  pool: 5
+#  timeout: 5000
