--- a/config/database.yml
+++ b/config/database.yml
@@ -4,16 +4,16 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-        #  adapter: postgresql
-        # database: mgap-devel
+        # adapter: postgresql
+        # database: mgap-devel2
         # pool: 5
         # timeout: 5000
         # username: chreyes
         # password: shhhade
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+        adapter: sqlite3
+        database: db/development.sqlite3
+        pool: 5
+        timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
