--- a/config/database.yml
+++ b/config/database.yml
@@ -4,12 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-        # adapter: postgresql
-        # database: mgap-devel2
-        # pool: 5
-        # timeout: 5000
-        # username: chreyes
-        # password: shhhade
+        #adapter: postgresql
+        #database: mgap_development
+        #pool: 5
+        #timeout: 5000
+        #username: chreyesg
+        #password: chreyesg
         adapter: sqlite3
         database: db/development.sqlite3
         pool: 5
